--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,3 +1,44 @@
-.main-board {
-  // grid-area: main;
+.main {}
+
+.main-display {
+
+  // .main-display__section
+
+  &__section {
+    &:not(:last-child) {
+      margin-bottom: 3.5rem;
+    }
+  }
+
+  // .main-display__card-wrapper
+
+  &__card-wrapper {
+    display: grid;
+    // .main-display__card-wrapper_trailer
+
+    &_trailer {
+      grid-template-columns: 1fr;
+    }
+
+    // .main-display__card-wrapper_continuing
+
+    &_continuing {
+      grid-template-columns: repeat(auto-fit, minmax(45rem, max-content));
+      gap: 6rem;
+
+      // &:first-child {
+      //   color: rebeccapurple;
+      //   border: 5px solid red;
+      // }
+    }
+
+    // .main-display__card-wrapper_trending
+
+    &_trending {
+      // grid-template-columns: repeat(auto-fit, minmax(28.6rem, max-content));
+      grid-template-columns: repeat(auto-fit, minmax(28.6rem, max-content));
+      // grid-template-columns: repeat(auto-fit, minmax(28.6rem, 28.6rem));
+      gap: 5rem;
+    }
+  }
 }
