--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -1,8 +1,5 @@
 .card {
   position: relative;
-  // padding: 1.9rem 1.9rem 0 1.9rem;
-  // width: 962px; // temp
-  // height: 202px; // temp
 
   display: flex;
   flex-direction: column;
@@ -23,35 +20,12 @@
     z-index: 1;
   }
 
-  // &_m::before {
-  //   height: 7rem;
-  // }
-
-  // &_s::before {
-  //   height: 4.3rem;
-  // }
-
-  // // card_accent
-  // &_accent {
-  //   &::before {
-  //     content: '';
-  //     display: block;
-  //     width: 100%;
-  //     position: absolute;
-  //     left: 0;
-  //     bottom: 0;
-  //     background: rgba(255, 255, 255, 0.07);
-  //     backdrop-filter: blur(16px);
-  //     /* Note: backdrop-filter has minimal browser support */
-  //     border-radius: 16px;
-  //   }
-  // }
-
   // card_accent
   &_accent {}
 
   // card_l
   &_l {
+    width: 100%;
     min-height: 20.2rem;
     // background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     background: url("../img/card1.jpg");
@@ -68,6 +42,7 @@
 
   // card_m
   &_m {
+    width: calc(450/961*100%);
     min-height: 25.1rem;
     background: url("../img/card2.jpg");
     background-size: cover;
@@ -82,24 +57,13 @@
 
   // card_s
   &_s {
+    width: calc(286/961*100%);
     min-height: 19.2rem;
     background: url("../img/card3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
   }
-
-  // // card_default
-
-  // &_default {
-  //   padding: 1.9rem;
-  // }
-
-  // // card_accent
-
-  // &_accent {
-
-  // }
 
   // .card__views
 
@@ -149,32 +113,6 @@
     display: grid;
     grid-template-columns: repeat(2, minmax(min-content, max-content));
     justify-content: space-between;
-
-    // &>* {
-    //   z-index: 55;
-    // }
-
-    // &_m::before {
-    //   height: 6.8rem;
-    // }
-
-    // &_s::before {
-    //   height: 3.8rem;
-    // }
-
-    // &::before {
-    //   content: '';
-    //   display: block;
-    //   width: 100%;
-    //   //height: 20%; // temp
-    //   position: absolute;
-    //   left: 0;
-    //   bottom: 0;
-    //   background: rgba(255, 255, 255, 0.07);
-    //   backdrop-filter: blur(16px);
-    //   /* Note: backdrop-filter has minimal browser support */
-    //   border-radius: 16px;
-    // }
 
     // .card__control-bar_l
 
